[metadata]
name = slackbot_server
version = 0.2.2
author = Gustavo Ourique
author_email = ourique.gustavo@gmail.com
description = SlackBot Python Web Server made with FastAPI and Uvicorn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ouriquegustavo/slackbot_server
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
install_requires = uvicorn>=0.16.0,fastapi>=0.70.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
